--- a/plugins.v2/transfersync/frontend/package.json
+++ b/plugins.v2/transfersync/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "transfersync-plugin",
+  "private": true,
   "version": "1.5.0",
   "type": "module",
   "scripts": {
@@ -8,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0"
+    "vue": "^3.3.11"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.0",
-    "@originjs/vite-plugin-federation": "^1.3.0",
-    "typescript": "^5.2.0",
-    "vite": "^5.0.0"
+    "@originjs/vite-plugin-federation": "^1.3.3",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "vue-tsc": "^1.8.25"
   }
 }
